# leetcode-gamify

./: .gitignore  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  run-script.yml
app/: fetch_score.py  generate_plot.py  send_webhook.py
config/: load_config.py  prompt_loader.py
prompts/: battle.txt
